# gnakry-auth-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  users_list.yml
.github/workflows/: main.yml
config/: users_list.yml
src/gnakry_auth_server/: main.py
src/gnakry_auth_server/router/: crud.py
tests/: test_gnakry_auth_server.py
