[tool.poetry]
name = "gnakry-auth-server"
version = "0.1.0"
description = ""
authors = ["Boubacar Sidy Diallo <bsdiallo07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
gunicorn = "^20.1.0"
pyaml = "^21.10.1"
pythonipqsdbreader = {git = "https://github.com/IPQualityScore/PythonIPQSDBReader", rev = "v1.0.5"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
